[package]
name = "roguelike-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.11.0"
rltk = { version = "0.8.7", features = ["webgpu", "serde"], default-features = false }
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
specs = { version = "0.19.0", features = ["serde"] }
specs-derive = "0.4.1"
